[package]
name = "path-dsl"
version = "0.6.1"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/cwfitzgerald/path-dsl-rs"
repository = "https://github.com/cwfitzgerald/path-dsl-rs"
description = "A utility DSL and macro to help deal with Paths and PathBufs."
documentation = "https://docs.rs/path-dsl/"
readme = "README.md"
keywords = ["path", "dsl", "utility"]
categories = ["development-tools"]

exclude = [
    ".gitignore",
    ".rustfmt.toml",
    "tests/*",
]

[dependencies]

[dev-dependencies]
more-asserts = "0.2.1"
paste = "0.1.5"
